# cpp-template

./: .gitignore
application/: CMakeLists.txt  main.cpp
